Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  selector:
    app: poi
  ports:
    - port: 8090
      targetPort: 8080
  type: LoadBalancer
