poiService.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
    - protocol: TCP
      name: poi-http
      port: 80
      targetPort: 80
