tripsService.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: trips
  ports:
    - protocol: TCP
      name: trips-http
      port: 80
      targetPort: 80
