userProfileService.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      name: trips-http
      port: 80
      targetPort: 80
