ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi
  namespace: api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: team.cc0e53df537a4392afde.northeurope.aksapp.io
    http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service: 
            name: poi
            port: 
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service: 
            name: trips
            port: 
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service: 
            name: userprofile
            port: 
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service: 
            name: userjava
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: team.cc0e53df537a4392afde.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tripviewer
            port: 
              number: 80
